--- a/imooc-ad-service/pom.xml
+++ b/imooc-ad-service/pom.xml
@@ -16,6 +16,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>ad-common</module>
+        <module>ad-search</module>
     </modules>
 
     <properties>
